# autonomus-wheelchair-grad-project

./: .gitignore  CHECK_PLUGIN_STATUS.sh  CHECK_REQUIRED_PACKAGES.sh  CHECK_ROBOT_VISIBLE.sh  COMPLETE_MOVEMENT_TEST.sh  DEBUG_CODE_LOGIC.sh  DEBUG_GAZEBO_RVIZ_GUIDE.md  DEBUG_MOVEMENT.sh  DEBUG_PLUGIN_LOADING.sh  DEBUG_SPAWN.sh  FIX_GAZEBO_COMMAND.sh  FIX_ROBOT_SPAWN.sh  INSTALL_MISSING_PACKAGES.sh  LAUNCH_GAZEBO_RVIZ.sh  LAUNCH_RVIZ.sh  LICENSE  MOVEMENT_TEST_RESULTS.md  QUICK_TEST_MOVEMENT.sh  README.md  REINSTALL_ROS_GAZEBO.sh  RESTART_GAZEBO.sh  RVIZ_DEBUG_SETUP.md  STOP_AND_RESTART.sh  TEST_MOVEMENT.sh  TEST_MOVEMENT_FIXED.sh  TEST_MOVEMENT_NOW.sh  UNINSTALL_ROS_GAZEBO.sh  USING_WORKING_WHEELCHAIR.md  frames_2025-11-24_03.41.21.gv  requirements.txt
autonomous_wheelchair/: .gitignore  ACTIVATE_CONTROLLERS.sh  CALCULATE_NEW_COM.md  DRIVING_GUIDE.md  NAV2_READINESS.md  NAV2_SETUP_GUIDE.md  QUICK_START.md  README.md  SLAM_GUIDE.md  SPEED_SETTINGS.md  START_KEYBOARD_CONTROL.sh  STOP_ALL.sh  TESTING_GUIDE.md  TEST_MOVEMENT.sh  check_nav2_readiness.sh  debug_turning.sh  launch_keyboard_teleop.sh  launch_rviz_debug.sh
autonomous_wheelchair/src/: .gitkeep
autonomous_wheelchair/src/wheelchair_description/: CMakeLists.txt  README.md  package.xml
autonomous_wheelchair/src/wheelchair_description/config/: controllers.yaml
autonomous_wheelchair/src/wheelchair_description/launch/: spawn_robot.launch.py  view_robot_rviz2.launch.py
autonomous_wheelchair/src/wheelchair_description/rviz/: wheelchair_view.rviz
autonomous_wheelchair/src/wheelchair_description/urdf/: wheelchair.gazebo.xacro  wheelchair.ros2_control.xacro  wheelchair.urdf.xacro
autonomous_wheelchair/src/wheelchair_gazebo/: CMakeLists.txt  package.xml
autonomous_wheelchair/src/wheelchair_gazebo/config/: nav2_params.yaml  slam_params.yaml
autonomous_wheelchair/src/wheelchair_gazebo/launch/: amcl.launch.py  nav2_bringup.launch.py  rviz_slam.launch.py  slam_mapping.launch.py  warehouse_with_amcl_rviz.launch.py  warehouse_with_nav2.launch.py  warehouse_with_nav2_web.launch.py  warehouse_with_robot.launch.py  warehouse_with_slam.launch.py  warehouse_with_slam_rviz.launch.py
autonomous_wheelchair/src/wheelchair_gazebo/maps/: mymap.pgm  mymap.yaml
autonomous_wheelchair/src/wheelchair_gazebo/scripts/: filter_lidar_self.py  fix_odom_frames.py  map_image_server.py  map_relay.py  odom_to_tf.py  publish_depth_camera_info.py
autonomous_wheelchair/src/wheelchair_gazebo/worlds/: tugbot_warehouse.sdf
autonomous_wheelchair/vision/: test_camera.py  yolo_node.py
autonomous_wheelchair/web_interface/: README.md  index.html  package.json
hardware/src/wheelchair_hardware/: CMakeLists.txt  package.xml
hardware/src/wheelchair_hardware/config/: ekf_params.yaml  nav2_hardware_params.yaml  scan_filter.yaml  slam_localization.yaml  slam_params.yaml
hardware/src/wheelchair_hardware/firmware/wheelchair_esp32/: wheelchair_esp32.ino
hardware/src/wheelchair_hardware/launch/: lidar_web.launch.py  manual_control.launch.py  navigation.launch.py  rplidar.launch.py  slam_mapping.launch.py  test_attitude.launch.py
hardware/src/wheelchair_hardware/scripts/: esp32_bridge.py  goal_relay.py  imu_attitude_test.py  keyboard_drive.py  map_bridge.py  yolo_safety_node.py
